[gd_scene load_steps=13 format=2]

[ext_resource path="res://StephenAssets/UI9Patches/TranslucentBackground/Orange UI 2.png" type="Texture" id=1]
[ext_resource path="res://UI scenes/ItemSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://StephenAssets/Buttons/Smaller Button/Small button unpressed.png" type="Texture" id=3]
[ext_resource path="res://StephenAssets/Buttons/Smaller Button/Small button pressed.png" type="Texture" id=4]
[ext_resource path="res://StephenAssets/Buttons/Smaller Button/Small button x.png" type="Texture" id=5]
[ext_resource path="res://MainScene/CombinationTable/CombinationTable.gd" type="Script" id=6]
[ext_resource path="res://StephenAssets/LoadingBar/Sideways loading bar white.png" type="Texture" id=7]
[ext_resource path="res://StephenAssets/LoadingBar/Sideways loading bar empty.png" type="Texture" id=8]
[ext_resource path="res://StephenAssets/LoadingBar/Sideways loading bar full.png" type="Texture" id=9]
[ext_resource path="res://StephenAssets/misc/Combo arrow.png" type="Texture" id=10]
[ext_resource path="res://Theme/KenneyBlackText.tres" type="Theme" id=11]
[ext_resource path="res://StephenAssets/misc/chain.png" type="Texture" id=12]

[node name="CombinationTable" type="NinePatchRect"]
margin_right = 300.0
margin_bottom = 160.0
rect_min_size = Vector2( 300, 160 )
theme = ExtResource( 11 )
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 292.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 9.0
text = "Combination Station"
align = 1

[node name="InputLayer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 292.0
margin_bottom = 52.0
custom_constants/separation = 35
alignment = 1

[node name="LeftSlot" parent="MarginContainer/VBoxContainer/InputLayer" instance=ExtResource( 2 )]
margin_left = 71.0
margin_right = 96.0
margin_bottom = 39.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InputLayer"]
margin_left = 131.0
margin_right = 161.0
margin_bottom = 39.0

[node name="CombineButton" type="TextureButton" parent="MarginContainer/VBoxContainer/InputLayer/VBoxContainer"]
margin_right = 30.0
margin_bottom = 20.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/InputLayer/VBoxContainer"]
margin_top = 24.0
margin_right = 30.0
margin_bottom = 39.0
max_value = 3.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="RightSlot" parent="MarginContainer/VBoxContainer/InputLayer" instance=ExtResource( 2 )]
margin_left = 196.0
margin_right = 221.0
margin_bottom = 39.0

[node name="BlankSpace" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 292.0
margin_bottom = 89.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/BlankSpace"]
margin_right = 292.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 33 )

[node name="ResultLayer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 292.0
margin_bottom = 118.0
alignment = 1

[node name="ResultSlot" parent="MarginContainer/VBoxContainer/ResultLayer" instance=ExtResource( 2 )]
margin_left = 133.0
margin_right = 158.0
margin_bottom = 25.0

[node name="Combo arrow" type="Sprite" parent="."]
position = Vector2( 205, 86 )
texture = ExtResource( 10 )

[node name="Combo arrow2" type="Sprite" parent="."]
position = Vector2( 95, 86 )
texture = ExtResource( 10 )
flip_h = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 88, 30 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 213, 30 )
texture = ExtResource( 12 )

[connection signal="item_added" from="MarginContainer/VBoxContainer/InputLayer/LeftSlot" to="." method="_on_LeftSlot_item_added"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/InputLayer/VBoxContainer/CombineButton" to="." method="_on_CombineButton_pressed"]
[connection signal="item_added" from="MarginContainer/VBoxContainer/InputLayer/RightSlot" to="." method="_on_RightSlot_item_added"]
